Move more CSS to dedicated modules; contain size of feed-sample
git-svn-id: http://plugins.svn.wordpress.org/feedwordpress/trunk@248012 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/feedwordpress-elements.css
+++ b/feedwordpress-elements.css
@@ -65,3 +65,31 @@
 	border-bottom-width:1px;
 }
 
+/* Switchfeed interface elements */
+
+form.fieldset {
+	clear: both;
+}
+.feed-sample { 
+	float: right;
+	background-color: #D0D0D0;
+	color: black;
+	width: 45%;
+	font-size: 70%;
+	border-left: 1px dotted #A0A0A0;
+	margin-left: 1.0em;
+	padding: 3px;
+	max-height: 200px;
+	overflow: auto;
+}
+.feed-sample p, .feed-sample h3 {
+	padding-left: 0.5em;
+	padding-right: 0.5em;
+}
+.feed-sample .feed-problem {
+	background-color: #ffd0d0;
+	border-bottom: 1px dotted black;
+	padding-bottom: 0.5em;
+	margin-bottom: 0.5em;
+}
+
