Monkey around a bit with the FeedFinder/switch-feed UI; guarantee that even if switch feed finds nothing else, it will still provide the current feed.
git-svn-id: http://plugins.svn.wordpress.org/feedwordpress/trunk@252172 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/feedwordpress-elements.css
+++ b/feedwordpress-elements.css
@@ -91,6 +91,12 @@
 #feed-finder form fieldset.alt {
 	background-color: #eee;
 }
+#feed-finder form fieldset.current {
+	background-color: #efe;
+}
+#feed-finder form fieldset.current legend {
+	background-color: #7f7;
+}
 #feed-finder form fieldset legend {
 	border-left: 1px solid #777;
 	border-right: 1px solid #777;
