UI: Consist presentation of Currently... in Posts & Links settings
git-svn-id: http://plugins.svn.wordpress.org/feedwordpress/trunk@259023 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/feedwordpress-elements.css
+++ b/feedwordpress-elements.css
@@ -65,6 +65,12 @@
 	border-bottom-width:1px;
 }
 
+.current-setting {
+	display: block;
+	font-size: smaller; 
+	margin-left: 2.0em;
+}
+
 /* Switchfeed interface elements */
 
 #feed-finder form {
