Nudge up p elements to top of settings row
git-svn-id: http://plugins.svn.wordpress.org/feedwordpress/trunk@266326 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/feedwordpress-elements.css
+++ b/feedwordpress-elements.css
@@ -165,6 +165,7 @@ table.edit-form td { width: 73%; vertical-align: top; padding: 0.5em; }
 table.edit-form td ul.options { margin: 0; padding: 0; list-style: none; }
 table.edit-form.narrow th { width: 15%; }
 table.edit-form.narrow td { width: 85%; }
+table.edit-form td p { margin-top: 0px; }
 
 table.twofer { width: 100%; border: none; }
 table.twofer tr { vertical-align: top; }
