--- a/feedwordpress-elements.css
+++ b/feedwordpress-elements.css
@@ -183,4 +183,22 @@ table.twofer td.equals.first.inactive { border-right: none; }
 table.twofer td.primary { width: 69%; border-right: 1px dotted #777; padding-right: 10px; }
 table.twofer td.secondary { padding-left: 10px; width: 30%; }
 
-
+#add-multiple-uri, #upload-opml {
+	float: right;
+	position: relative;
+	width: 50%;
+	background-color: #cfc;
+	padding-left: 1.0em; padding-right: 1.0em;
+	padding-top: 0.5em; padding-bottom: 0.5em;
+	right: 0;
+	top: auto;
+}
+#add-multiple-uri textarea {
+	width: 100%;
+	margin-top: 0.5em;
+}
+#add-multiple-uri h4 {
+	margin-bottom: 2px;
+	margin-top: 0px;
+	border-bottom: 1px dotted black; 
+}
