UI improvements: make Feeds/Posts/Authors/Categories easily accessible from feed-specific settings pages
git-svn-id: http://plugins.svn.wordpress.org/feedwordpress/trunk@278951 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/feedwordpress-elements.css
+++ b/feedwordpress-elements.css
@@ -34,11 +34,17 @@
 }
 
 /* Common settings page elements */
-#post-search {
-	float: right;
+#fwpfs-container {
 	margin:11px 12px 0;
 	min-width: 130px;
 	position:relative;
+}
+#fwpfs-container .subsubsub {
+	float: none !important;
+}
+.tablenav p.submit {
+	margin: 0px;
+	padding: 0px;
 }
 .fwpfs {
 	color: #dddddd !important; background-color: #333 !important;
