--- a/feedwordpress-elements.css
+++ b/feedwordpress-elements.css
@@ -387,6 +387,20 @@ table.twofer td.secondary { padding-left: 10px; width: 30%; }
 	vertical-align: middle;
 }
 
+#link-rss-userpass-use, #link-rss-authentication {
+	display: block;
+	font-size: 75%;
+	white-space: nowrap; 
+	padding: 0.5em 0;
+}
+#link-rss-authentication label {
+	font-weight: bold;
+	padding-left: 1.5em;
+}
+#link-rss-authentication td {
+	width: 25%;
+}
+
 #feedwordpress-admin-feeds .link-rss-params-row { vertical-align: middle; }
 #feedwordpress-admin-feeds .link-rss-params-remove, .feedwordpress-admin .remove-it {
 	display: block;
