--- a/assets/css/feedwordpress-elements.css
+++ b/assets/css/feedwordpress-elements.css
@@ -74,7 +74,7 @@
 
 .current-setting {
 	display: block;
-	font-size: smaller; 
+	font-size: smaller;
 	margin-left: 2.0em;
 	font-size: smaller;
 }
@@ -143,7 +143,7 @@ ul.current-setting {
 	margin-right: 3.0em;
 }
 
-#feed-finder .feed-sample { 
+#feed-finder .feed-sample {
 	float: right;
 	background-color: #D0D0D0;
 	color: black;
@@ -207,7 +207,7 @@ table.twofer td.secondary { padding-left: 10px; width: 30%; }
 #add-multiple-uri h4 {
 	margin-bottom: 2px;
 	margin-top: 0px;
-	border-bottom: 1px dotted black; 
+	border-bottom: 1px dotted black;
 }
 
 #dashboard-widgets #feedwordpress_dashboard h4 {
@@ -341,7 +341,7 @@ table.twofer td.secondary { padding-left: 10px; width: 30%; }
 	font-size: 70%;
 	position: absolute;
 	top: 0; bottom: 0; right: 0; left: auto;
-	width: 50%;		
+	width: 50%;
 }
 #feedwordpress-admin-syndication .donation-thanks {
 	background-color: #ccffcc;
@@ -389,7 +389,7 @@ table.twofer td.secondary { padding-left: 10px; width: 30%; }
 #link-rss-userpass-use, .link-rss-authentication table {
 	display: block;
 	font-size: 75%;
-	white-space: nowrap; 
+	white-space: nowrap;
 	padding: 0.5em 0;
 }
 #feed-finder .link-rss-authentication table {
@@ -443,7 +443,7 @@ table.twofer td.secondary { padding-left: 10px; width: 30%; }
 .fwp-xpath-test-results-close {
 	position: absolute;
 	top: 10px; right: 10px;
-	
+
 }
 .fwp-xpath-test-setting {
 	font-size: smaller;
@@ -471,3 +471,23 @@ table.twofer td.secondary { padding-left: 10px; width: 30%; }
 .hovered-component .hover-on { display: none; }
 .hovered-component:hover .hover-on { display: inline; }
 .hovered-component:hover .hover-on.pop-over { display: block; position: absolute; }
+
+/*
+ * Getting rid of the ugly tiny PNG and replacing it with a WP Dashicon plus sign
+ * (gwyneth 20210714)
+ */
+
+.feedwordpress-plus-button {
+	color: green;
+	background-color: transparent;
+	border: none;
+	text-align: left;
+	text-decoration: none;
+	display: inline-block;
+	cursor: pointer;
+	vertical-align: middle;
+}
+.feedwordpress-plus-button:hover {
+	background-color: transparent;
+	color: #4CAF50;
+}
