:before didn't work
This was an attempt to get a slightly smaller-sized icon, but the order that WP loads CSS will not allow this

--- a/assets/css/feedwordpress-elements.css
+++ b/assets/css/feedwordpress-elements.css
@@ -583,7 +583,8 @@ table.twofer td.secondary {
  * Getting rid of the ugly tiny PNGs and replacing it with WP Dashicons
  * (gwyneth 20210717)
  */
-.feedwordpress-dashicons {
+.feedwordpress-dashicons,
+.feedwordpress-dashicons:before {
 	width: 18px;
 	height: 18px;
 	font-size: 18px;
